--- a/.env.testing
+++ b/.env.testing
@@ -23,7 +23,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=laravel_db
 DB_PORT=3306
-DB_DATABASE=senff_test
+DB_DATABASE=testing
 DB_USERNAME=senff_db
 DB_PASSWORD=senff_pw
 
