--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -67,5 +67,6 @@ COPY docker/app/php.ini /etc/php/8.4/cli/conf.d/99-sail.ini
 RUN chmod +x /usr/local/bin/start-container
 
 EXPOSE 80/tcp
+EXPOSE 5173
 
 ENTRYPOINT ["start-container"]
