--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:WFjiQYlUX6neIGHJQRT0yF6nrPdAsdIveuUDXJ22DNc=
 APP_DEBUG=true
 APP_URL=http://localhost
 
