--- a/.env.testing
+++ b/.env.testing
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:WFjiQYlUX6neIGHJQRT0yF6nrPdAsdIveuUDXJ22DNc=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,7 +21,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=laravel_db
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=testing
 DB_USERNAME=senff_db
