--- a/.env.testing
+++ b/.env.testing
@@ -21,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=testing
-DB_USERNAME=senff_db
-DB_PASSWORD=senff_pw
+DB_USERNAME=${DB_USERNAME}
+DB_PASSWORD=${DB_PASSWORD}
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
