--- a/.env.testing
+++ b/.env.testing
@@ -20,12 +20,8 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=db
-DB_PORT=3306
-DB_DATABASE=testing
-DB_USERNAME=${DB_USERNAME}
-DB_PASSWORD=${DB_PASSWORD}
+DB_CONNECTION=sqlite
+DB_DATABASE=:memory:
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
